...
        <variable
            name="TodoList"
            type="com.twenk11k.todolists.roomdb.todolist.TodoList" />
    </data>

    <RelativeLayout
        android:id="@+id/relativeList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">
...
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/todo"
            android:tint="@color/colorLightGray" />

        <ImageView
            android:id="@+id/imageDeleteList"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="?android:attr/selectableItemBackground"
...
