...
        <variable
            name="TodoItem"
            type="com.twenk11k.todolists.roomdb.todolist.TodoItem" />
    </data>

    <RelativeLayout
        android:id="@+id/relativeItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">
...
                android:textColor="@color/colorLightGray"
                android:textSize="15sp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageDeleteItem"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="?android:attr/selectableItemBackground"
...
