<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.EnterActivity" >

    <item
        android:id="@+id/menu_order_by"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@drawable/baseline_sort_white_24"
        android:title="@string/menu_order_by">
        <menu>
            <group android:id="@+id/group"
                android:checkableBehavior="single">
            <item
                android:id="@+id/menu_order_by_name"
                android:title="@string/name"
                />
            <item
                android:id="@+id/menu_order_by_status"
                android:title="@string/status"/>
            <item
                android:id="@+id/menu_order_by_deadline"
                android:title="@string/deadline"/>
            <item
                android:id="@+id/menu_order_by_createdate"
                android:title="@string/createdate"/>
            <item
                android:id="@+id/menu_order_by_expired"
                android:title="@string/expired"/>
            </group>
        </menu>
    </item>


</menu>